Add database initialization script and schema for PostgreSQL

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install:backend": "cd backend && npm install",
     "install:frontend": "cd frontend && npm install",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "start:backend": "cd backend && npm run dev",
+    "start:backend": "cd backend && npm run init-db && npm run dev",
     "start:frontend": "cd frontend && npm start",
     "build": "cd frontend && npm run build"
   },
