--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "postinstall": "npm rebuild bcrypt --build-from-source",
+    "init-db": "node scripts/init-database.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
